--- a/css/animate.css
+++ b/css/animate.css
@@ -45,9 +45,13 @@
     0% {
         stroke-dashoffset: 4000;
     }
-    
-    100% {
+
+    50% {
         stroke-dashoffset: 0;
+    }
+
+    100% {
+        stroke-dashoffset: -4000;
     }
 }
 
@@ -56,8 +60,16 @@
         stroke-dashoffset: 2600;
     }
     
-    100% {
+    50% {
         stroke-dashoffset: 0;
+    }
+
+    75% {
+        stroke-dashoffset: 0;
+    }
+
+    100% {
+        stroke-dashoffset: -2600;
     }
 }
 
